# armPick

./: .rosinstall  README.md  mingling.odt
aruco_ros/aruco_ros/src/: marker_publish.cpp  simple_single.cpp
caster_app/: README.md  package.xml
caster_app/config/: disinfect.yaml
caster_app/launch/: disinfect.launch
caster_app/script/: caster_log.py  odom_ekf.py  rosbag_transform.py  save_all.py  save_single.py  test_imu.py  ultrasonic_protection.py
caster_app/src/: caster_disinfect_node.cpp
caster_description/: CMakeLists.txt  README.md  package.xml
caster_description/launch/: model.launch  model_v2.launch
caster_description/mesh/body_v3/: z_movable_structure_fix_v3-urdf.stl  z_movable_structure_up_v3-urdf(1).stl
caster_description/mesh/v2/: drive_wheel_left.stl  drive_wheel_right.stl  support_wheel_body.stl  support_wheel_roller.stl
caster_description/urdf/: caster.urdf.xacro  caster_v2.urdf.xacro  caster_v2_gazebo.urdf.xacro  caster_v2_xacro.xacro  caster_xacro.xacro  common_properties.xacro  iqr_caster.gazebo.xacro
caster_description/urdf/body/: caster_body.urdf.xacro  caster_body_v2.urdf.xacro
caster_desktop/caster_desktop/: package.xml
caster_desktop/caster_teleop/: package.xml
caster_desktop/caster_teleop/config/: joy_teleop.yaml
caster_desktop/caster_viz/: package.xml
caster_desktop/caster_viz/viz/: navigation.rviz
caster_moma_app/: CMakeLists.txt  README.md  package.xml
caster_moma_app/action/: Introduce.action  PickItems.action
caster_moma_app/collision_meshes/: cabinet-urdf.stl
caster_moma_app/config/: .caster_moma_app.yaml.swp  caster_moma_app.yaml  goals.yaml  joy_teleop.yaml
caster_moma_app/launch/: introduce.launch  marker_detect.launch  pick_place_demo.launch  pick_task.launch
caster_moma_app/script/: jaco2_pick_place.py  move_client.py  pick_place_demo_2.py
caster_moma_app/src/: arm_init.cpp  fake_pick_place_demo.cpp  introduce_server.cpp  marker_detect_node.cpp  pick_and_place_demo.cpp  pick_task.cpp  pick_task_client.cpp  pick_task_iqr.cpp
caster_moma_robot/: README.md
caster_moma_robot/caster_moma_bringup/: CMakeLists.txt  package.xml
caster_moma_robot/caster_moma_bringup/config/: 57-caster-moma-v2.rules
caster_moma_robot/caster_moma_bringup/launch/: caster_moma_gen3_bringup.launch  caster_moma_j2n6s200_bringup.launch  caster_moma_j2s6s200_bringup.launch
caster_moma_robot/caster_moma_bringup/launch/include/: kinect2_bridge.launch.xml
caster_moma_robot/caster_moma_moveit_config/caster_moma_gen3_7d_2f85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
caster_moma_robot/caster_moma_moveit_config/caster_moma_gen3_7d_2f85_moveit_config/config/: caster_kinova_xacro.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
caster_moma_robot/caster_moma_moveit_config/caster_moma_gen3_7d_2f85_moveit_config/launch/: caster_kinova_xacro_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  execute.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
caster_moma_robot/caster_moma_moveit_config/caster_moma_j2s7s300_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
caster_moma_robot/caster_moma_moveit_config/caster_moma_j2s7s300_moveit_config/config/: caster_kinova_xacro.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
caster_moma_robot/caster_moma_moveit_config/caster_moma_j2s7s300_moveit_config/launch/: caster_kinova_xacro_moveit_controller_manager.launch.xml  caster_moma_demo.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
caster_moma_robot/caster_moma_moveit_config/caster_moma_moveit_config/: CMakeLists.txt  package.xml
caster_moma_robot/caster_moma_robot/: CMakeLists.txt  package.xml
caster_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
caster_robot/caster_auto_charge/script/: dock_server.py
caster_robot/caster_base/config/: joy_teleop.yaml
caster_robot/caster_base/launch/include/: base.launch.xml
caster_robot/caster_base/src/: caster_hardware.cpp
caster_robot/caster_navigation/: CMakeLists.txt
caster_robot/caster_navigation/launch/: navigation.launch  navigation_buaa_zb.launch  navigation_gmaping.launch
caster_robot/caster_navigation/maps/: 10_11_22_31.yaml
caster_simulator/: README.md
caster_simulator/caster_gazebo/: README.md
caster_simulator/caster_simulator/: CMakeLists.txt  LICENSE  package.xml
dauxi_ks106/: CMakeLists.txt  README.md  package.xml
dauxi_ks106/config/: 55-ks106.rules
dauxi_ks106/include/: dauxi_ks106.h
dauxi_ks106/launch/: dauxi_ks106_bringup.launch
dauxi_ks106/src/: dauxi_ks106.cpp  dauxi_ks106_node.cpp
hongfu_bms/hongfu_bms_status/launch/: hongfu_bms_status_bringup.launch
hongfu_bms/hongfu_bms_status/src/: hongfu_bms_status.cpp
iqr_pan_tilt/pan_tilt_bringup/launch/: bringup.launch  bringup_action.launch
iqr_pan_tilt/pan_tilt_driver/: CMakeLists.txt
iqr_pan_tilt/pan_tilt_driver/src/: pan_tilt_driver_action.cpp
iqr_pan_tilt/pan_tilt_msgs/: CMakeLists.txt  package.xml
iqr_pan_tilt/pan_tilt_msgs/action/: PanTiltCmd.action
jy901_driver/: CMakeLists.txt  package.xml
jy901_driver/config/: 58-jy901.rules
jy901_driver/launch/: jy901_test.launch
jy901_driver/src/: JY901.h  jy901_driver_node.cpp
(+3 files in other folders)
