<?xml version="1.0"?>
<package format="2">
  <name>caster_moma_app</name>
  <version>1.1.0</version>
  <description>ROS package for Caster MOMA application</description>

  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/CasterLab/caster_moma_app</url>
  <url type="repository">https://github.com/CasterLab/caster_moma_app</url>
  <url type="bugtracker">https://github.com/CasterLab/caster_moma_app/issues</url>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>aruco_msgs</depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>caster_moma_bringup</exec_depend>
  <exec_depend>caster_moma_description</exec_depend>
  <exec_depend>caster_moma_j2s6s200_moveit_config</exec_depend>
  <exec_depend>caster_moma_j2n6s200_moveit_config</exec_depend>
  <exec_depend>caster_moma_j2s7s300_moveit_config</exec_depend>
  <exec_depend>caster_moma_gen3_7d_2f85_moveit_config</exec_depend>

  <export>
  </export>
</package>
