<?xml version="1.0"?>
<package format="2">
  <name>caster_msgs</name>
  <version>2.1.0</version>
  <description>ROS package for Caster robot msgs, services, and actionlib msgs</description>

  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/CasterLab/caster_msgs</url>
  <url type="repository">https://github.com/CasterLab/caster_msgs</url>
  <url type="bugtracker">https://github.com/CasterLab/caster_msgs/issues</url>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
  </export>
</package>
