<?xml version="1.0"?>
<package format="2">
  <name>caster_viz</name>
  <version>2.1.0</version>
  <description>Rviz config for Caster</description>

  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/CasterLab/caster_desktop</url>
  <url type="repository">https://github.com/CasterLab/caster_desktop</url>
  <url type="bugtracker">https://github.com/CasterLab/caster_desktop/issues</url>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rviz</depend>
  <depend>rviz_imu_plugin</depend>

  <export>
  </export>
</package>
