<?xml version="1.0"?>
<package format="2">
  <name>caster_moma_moveit_config</name>
  <version>1.1.0</version>
  <description>The caster_moma_moveit_config package</description>


  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/CasterLab/caster_moma_moveit_config</url>
  <url type="repository">https://github.com/CasterLab/caster_moma_moveit_config</url>
  <url type="bugtracker">https://github.com/CasterLab/caster_moma_moveit_config/issues</url>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>caster_moma_j2s6s200_moveit_config</exec_depend>
  <exec_depend>caster_moma_j2n6s200_moveit_config</exec_depend>
  <exec_depend>caster_moma_j2s7s300_moveit_config</exec_depend>
  <exec_depend>caster_moma_gen3_7d_2f85_moveit_config</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
